CSS: fix markdown images overflow

--- a/styles/Post.module.scss
+++ b/styles/Post.module.scss
@@ -61,6 +61,10 @@
     margin-top: 0;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   a {
     border-bottom: 1px solid var(--color-link-underline);
 
